# cynthiabot

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
src/: cynthiabot.py  cynthiabot_processor.py  dao.py  test.py  util.py  webhook.py
src/ebay/: completed.py  ebay.yaml  scrape.py
src/scripts/: add_discord_command.py
src/tcgrepublic/: scrape.py
tests/: conftest.py  test_dao.py  test_ebay_page.html  test_ebay_scrape.py
